// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayCell applies today styling 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#1e3a5f",
      "borderColor": "#3b82f6",
      "borderRadius": 8,
      "borderWidth": 2,
      "flex": 1,
      "justifyContent": "center",
      "margin": 1,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      {
        "color": "#f8fafc",
        "fontSize": 17,
        "fontWeight": "700",
      }
    }
  >
    1
  </Text>
  <View
    style={
      {
        "backgroundColor": "transparent",
        "borderRadius": 3,
        "height": 6,
        "marginTop": 3,
        "width": 24,
      }
    }
  />
</View>
`;

exports[`DayCell dims non-current month days 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#1e293b",
      "borderColor": "transparent",
      "borderRadius": 8,
      "borderWidth": 0,
      "flex": 1,
      "justifyContent": "center",
      "margin": 1,
      "opacity": 0.3,
    }
  }
>
  <Text
    style={
      {
        "color": "#f8fafc",
        "fontSize": 17,
        "fontWeight": "600",
      }
    }
  >
    15
  </Text>
  <View
    style={
      {
        "backgroundColor": "transparent",
        "borderRadius": 3,
        "height": 6,
        "marginTop": 3,
        "width": 24,
      }
    }
  />
</View>
`;

exports[`DayCell renders empty view when day is 0 1`] = `
<View
  style={
    {
      "flex": 1,
      "margin": 1,
    }
  }
/>
`;

exports[`DayCell shows green tile for in-office 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#1e293b",
      "borderColor": "transparent",
      "borderRadius": 8,
      "borderWidth": 0,
      "flex": 1,
      "justifyContent": "center",
      "margin": 1,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      {
        "color": "#f8fafc",
        "fontSize": 17,
        "fontWeight": "600",
      }
    }
  >
    1
  </Text>
  <View
    style={
      {
        "backgroundColor": "#22c55e",
        "borderRadius": 3,
        "height": 6,
        "marginTop": 3,
        "width": 24,
      }
    }
  />
</View>
`;
